--- a/index.html
+++ b/index.html
@@ -354,18 +354,10 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-white mb-4">Newsletter</h4>
-                <form action="Error.html">
-                    <div class="form-group">
-                        <input type="text" class="form-control border-0" placeholder="Your Name" required="required" />
-                    </div>
-                    <div class="form-group">
-                        <input type="email" class="form-control border-0" placeholder="Your Email" required="required" />
-                    </div>
-                    <div>
-                        <button class="btn btn-lg btn-secondary btn-block border-0" type="submit">Submit Now</button>
-                    </div>
-                </form>
+                <h4 class="text-white mb-4"><A>Admission Inquiry</A></h4>
+                <a href="https://surveyheart.com/form/62448dbc9a25302d4b37cf34"><img src="Admission Inquiry QR.png"  width="200" height="200">
+                <h6 class="text-white mb-4"><A class="text-white mb-4" href="https://surveyheart.com/form/62448dbc9a25302d4b37cf34">Click or Scan QR for Inquiry</A></h6>
+                </a>
             </div>
         </div>
     </div>
