--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <i class="fa fa-2x fa-map-marker-alt text-white m-0 mr-3"></i>
                         <div class="d-flex flex-column">
                             <h5 class="text-white font-weight-medium">Our Location</h5>
-                            <p class="m-0 text-white">Kheda , 387441</p>
+                            <p class="m-0 text-white">Kheda , 387570</p>
                         </div>
                     </div>
                 </div>
@@ -258,23 +258,23 @@
                     <p> "Your Work. Our responsibility" is the main motto. 100% Satisfaction of clients is our main goal. </p>
                     <div class="row">
                         <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">2</h1>
+                            <h1 class="text-secondary" data-toggle="counter-up">15</h1>
                             <h5 class="font-weight-bold">Years Expereince</h5>
                         </div>
                         <div class="col-sm-6 mb-4">
                             <h1 class="text-secondary" data-toggle="counter-up">5</h1>
-                            <h5 class="font-weight-bold">Expert Worker</h5>
+                            <h5 class="font-weight-bold">Expert Faculty</h5>
                         </div>
                         <div class="col-sm-6 mb-4">
-                            <h1 class="text-secondary" data-toggle="counter-up">50</h1>
-                            <h5 class="font-weight-bold">Happy Clients</h5>
+                            <h1 class="text-secondary" data-toggle="counter-up">5000</h1>
+                            <h5 class="font-weight-bold">Happy Students</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <div class="d-flex flex-column align-items-center justify-content-center bg-secondary h-100 py-5 px-3">
                         <i class="fa fa-5x fa-certificate text-white mb-5"></i>
-                        <h1 class="display-1 text-white mb-3">2+</h1>
+                        <h1 class="display-1 text-white mb-3">15+</h1>
                         <h1 class="text-white m-0">Years Experience</h1>
                     </div>
                 </div>
@@ -332,8 +332,8 @@
     <div class="container-fluid bg-primary text-white mt-5 pt-5 px-sm-3 px-md-5">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
-                <a href=""><h1 class="text-secondary mb-3"><span class="text-white">Compify</span></h1></a>
-                <p>Your work. Our responsibility</p>
+                <a href=""><h1 class="text-secondary mb-3"><span class="text-white">Pankti Academy</span></h1></a>
+                <p>Ignite Your Mind</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://wa.me/c/919898374635"><i class="fab fa-whatsapp"></i></a>
                     <a class="btn btn-outline-light rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="https://www.instagram.com/pratik_patel_master"><i class="fab fa-instagram"></i></a>
@@ -342,7 +342,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-white mb-4">Get In Touch</h4>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>Sokhda , Kheda , 387441</p>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>Sokhda , Kheda , 387570</p>
                 <p><i class="fa fa-phone-alt mr-2"></i>+91  9898374635</p>
                 <p><i class="fab fa-youtube mr-2"></i>Pankti Academy</p>
             </div>
