--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Pankti Academy</title>
+    <link rel="icon" href="img/logo.jpeg" type="image/jpeg">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Include the Font Awesome CSS -->
@@ -84,9 +85,9 @@
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="service.html" class="nav-item nav-link ">Services</a>
+                       <!--  <a href="service.html" class="nav-item nav-link ">Services</a> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        <a href="blog.html" class="nav-item nav-link">Blog</a>
+                       <!--  <a href="blog.html" class="nav-item nav-link">Blog</a> -->
                     </div>
                 </div>
             </nav>
@@ -100,21 +101,21 @@
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/cr1.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3"></h4>
-                            <h1 class="display-3 text-white mb-md-4">Best For Techie Works</h1>
+                            <h1 class="display-3 text-white mb-md-4">Focuses on Students Carreer</h1>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/cr3.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3"></h4>
-                            <h1 class="display-3 text-white mb-md-4">Highly Knowledgeable Staff</h1>
+                            <h1 class="display-3 text-white mb-md-4">Highly Knowledgeable Faculty</h1>
                             <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Learn More</a>
                         </div>
                     </div>
@@ -177,34 +178,34 @@
         <div class="container pt-0 pt-lg-4">
             <div class="row align-items-center">
                 <div class="col-lg-5">
-                    <img class="img-fluid" src="img/about.jpg" alt="">
+                    <img class="img-fluid" src="img/logo.jpeg" alt="">
                 </div>
                 <div class="col-lg-7 mt-5 mt-lg-0 pl-lg-5">
                     <h6 class="text-secondary text-uppercase font-weight-medium mb-3">Learn About Us</h6>
-                    <h1 class="mb-4">We Are Quality Techie service Provider In Your City</h1>
+                    <h1 class="mb-4">We Are Quality Teaching service Provider In Your City</h1>
                     <div class="row">
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Quality Techie Service</p>
+                                <p class="text-secondary font-weight-medium m-0">Quality Knowledge Provider</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">On-time complition of work</p>
+                                <p class="text-secondary font-weight-medium m-0">Covers Full Course </p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">Highly Knowledgeable Staff</p>
+                                <p class="text-secondary font-weight-medium m-0">Highly Knowledgeable Faculty</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pt-3">
                             <div class="d-flex align-items-center">
                                 <i class="fa fa-check text-primary mr-2"></i>
-                                <p class="text-secondary font-weight-medium m-0">100% Satisfaction Guarantee</p>
+                                <p class="text-secondary font-weight-medium m-0">100% Result till now</p>
                             </div>
                         </div>
                     </div>
