--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                         <div class="col-md-4">
                             <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
-                                    <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
+                                    <a href="https://goo.gl/maps/q14TvoMQZic81owP6?coh=178572&entry=tt"></a> <i class="fa fa-2x fa-map-marker-alt text-secondary"></i></a>
                                 </div>
                                 <a href="https://goo.gl/maps/q14TvoMQZic81owP6?coh=178572&entry=tt" class="font-weight-medium m-0 mt-2">Sokhda, kheda 387570</a>
                             </div>
@@ -129,7 +129,7 @@
                         <div class="col-md-4">
                             <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
-                                    <i class="fab fa-2x fa-whatsapp text-secondary"></i>
+                                   <a href="https://wa.me/c/919898374635"><i class="fab fa-2x fa-whatsapp text-secondary"></i></a>
                                 </div>
                                 <a href="https://wa.me/c/919898374635" class="font-weight-medium m-0 mt-2">Whatsapp Inquiry</a>
                             </div>
@@ -137,7 +137,7 @@
                         <div class="col-md-4">
                             <div class="d-flex flex-column align-items-center justify-content-center text-center mb-5">
                                 <div class="d-inline-flex align-items-center justify-content-center bg-white border border-light shadow rounded-circle mb-4" style="width: 100px; height: 100px; border-width: 15px !important;">
-                                    <i class="fa fa-2x fa-phone-alt text-secondary"></i>
+                                    <a href="tel:9898374635"></a> <i class="fa fa-2x fa-phone-alt text-secondary"></i></a>
                                 </div>
                                 <a href="tel:9898374635"class="font-weight-medium m-0 mt-2">Call Us (9898374635)</a>
                             </div>
