--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <center><h4 class="text-white mb-4"><A>Admission Inquiry</A></h4>
-                <a href="https://surveyheart.com/form/62448dbc9a25302d4b37cf34"><img src="Admission Inquiry QR.png"   width="170" height="170">
+                <a href="hhttps://wa.me/919898374635"><img src="Admission Inquiry QR.png"   width="170" height="170">
                 <h6 class="text-white mb-4"><A class="text-white mb-4" href="https://surveyheart.com/form/62448dbc9a25302d4b37cf34">Click or Scan QR for Inquiry</A></h6>
                 </a>
             </center>
