--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 
                 <div class="col-lg-3 col-md-6 pb-1">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center bg-light mb-4 px-4" style="height: 300px;">
-                         <h4 class="font-weight-bold m-0">Class 1 to 10 (CBSE / GSEB )</h4>
+                         <h4 class="font-weight-bold m-0">Class 1 to 12 (CBSE / GSEB ) (Science / Commerce)</h4>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 pb-1">
